Fix on dark mode

--- a/components/Desktop/Contact.module.css
+++ b/components/Desktop/Contact.module.css
@@ -65,7 +65,7 @@
     width: max(65%,600px);
     height: 450px;
     position: absolute;
-    background: rgba(229, 229, 229, 0.9);
+    background: rgba(var(--window-rgba));
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(12.6px);
@@ -96,7 +96,7 @@
     padding: 10px 20px 25px 0px;
     border-radius: 16px 16px 0px 0px;
     gap: 10px;
-    background-color: whitesmoke;
+    background-color: rgb(var(--windowbar-rgb));
     position: sticky;
     top: 0;
     width: 100%;
