--- a/components/Nav/SectionNav.module.css
+++ b/components/Nav/SectionNav.module.css
@@ -6,7 +6,7 @@
     background-color: rgba(var(--callout-rgb), 0.5);
     border: 1px solid rgba(var(--callout-border-rgb), 0.3);
     border-radius: var(--border-radius);
-    cursor: pointer;
+    /* cursor: pointer; */
     box-shadow: 0 0 0 1px rgba(var(--callout-border-rgb), 0.3);
     z-index: 3;
   }
